# http-client-server

./: HttpRequest.cpp  HttpRequest.h  HttpWorkerThread.cpp  HttpWorkerThread.h  LICENSE  README.md  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  strutil.cpp  strutil.h
client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
